Make sure text isn't wrapped (Japanese!)
--HG--
extra : convert_revision : svn%3Ad8bf93c1-8190-44a8-bb31-1ea94378a4df/trunk%40764

--- a/chrome/content/objtabs.css
+++ b/chrome/content/objtabs.css
@@ -56,6 +56,7 @@ a.abp-objtab div {
   background: white !important;
   color: black !important;
   cursor: pointer !important;
+  white-space: nowrap !important;
   font-family: Arial,Helvetica,Sans-Serif !important;
   font-size: 10px !important;
   font-style: normal !important;
